--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./tests/**/*$NAME*.{test,spec}.js --exit",
-    "start": "nodemon index.js",
+    "start": "pm2-runtime start ecosystem.config.yaml",
+    "dev": "nodemon index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
@@ -14,7 +15,8 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "express": "^4.17.2",
-    "mongodb": "^4.3.1"
+    "mongodb": "^4.3.1",
+    "pm2": "^5.1.2"
   },
   "devDependencies": {
     "chai": "^4.3.6",
