--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pm2/pm2-version-check": "^1.0.4",
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
+    "mongodb-memory-server": "^6.9.6",
     "pm2": "^5.1.2"
   },
   "devDependencies": {
